force-app/main/default/objects/vlocity_cmt__OrderAsyncOperationEvent__e/vlocity_cmt__OrderAsyncOperationEvent__e.object-meta.xml
<CustomObject>
    <description>Requests an asynchronous operation to run on the requested order, optionally on a specific order item bundle.</description>
    <label>Order Asynchronous Operation Event</label>
    <pluralLabel>Order Asynchronous Operation Events</pluralLabel>
</CustomObject>