force-app/main/default/objects/vlocity_cmt__OrderAsyncOperationEvent__e/fields/vlocity_cmt__AsyncOperationData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncOperationData__c</fullName>
    <description>Additional data that is useful or necessary to the requested asynchronous operation.</description>
    <label>Async Operation Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>