force-app/main/default/objects/vlocity_cmt__OrderAsyncOperationEvent__e/fields/vlocity_cmt__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderId__c</fullName>
    <description>Id of the order on which the asynchronous operation needs to occur (required).</description>
    <label>Order</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>