force-app/main/default/objects/vlocity_cmt__OrderAsyncOperationEvent__e/fields/vlocity_cmt__OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderItemId__c</fullName>
    <description>Id of the order item on which the asynchronous operation needs to occur (when relevant).</description>
    <label>Order Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>